# SiGerbang-BE

./: .env  .env.prod  .gitignore  Cargo.toml  README.md  diesel.toml  package-lock.json  package.json  tsconfig.json
migrations/2024-07-04-112105_initial_table/: down.sql  up.sql
migrations/2024-07-05-070751_fixgrub_table/: down.sql  up.sql
migrations/2024-07-05-072354_addextragrubuser_table/: down.sql  up.sql
prisma/: schema.prisma
src/: actors.rs  db_models.rs  db_utils.rs  main.rs  main.ts  messages.rs  models.rs  services.rs
src/controller/: authController.ts  grubController.ts  systemController.ts  userController.ts  usergrubController.ts
src/database/: db.ts  db_models.rs  mod.rs  schema.rs
src/error/: customError.ts  secureError.ts  validationError.ts
src/handlers/: grub_handler.rs  mod.rs  user_handler.rs
src/middleware/: globalErrorMiddleware.ts  limiterMiddleware.ts  loggerMiddleware.ts  secureMiddleware.ts  userMiddleware.ts  usergrubMiddleware.ts
src/model/: ResponeMessage.ts  authModel.ts  storeDataModel.ts
src/models/: grub_model.rs  grubuser_model.rs  mod.rs  system_model.rs  user_model.rs
src/router/: authRouter.ts  grubRouter.ts  systemRouter.ts  userRouter.ts  usergrubRouter.ts
src/routes/: grub_route.rs  mod.rs  system_route.rs  user_route.rs
src/service/: grubService.ts  userService.ts  usergrubService.ts
src/services/: grub_service.rs  mod.rs  system_service.rs  user_service.rs
src/utils/: betterlog.ts  helper.ts  secure.rs  secureUtils.ts
src/websocket/: coreWebsocket.ts  privateWebsocket.ts  publicWebscoket.ts
