[package]
name = "SiGerbang"
version = "0.1.1"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"

chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
sha2 = "0.10.8"
uuid = { version = "1.9.1", features = ["v4"] }

serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

diesel = { version = "2.0.3", features = ["postgres" , "uuid" , "r2d2" , "chrono"] }